# SANKOFA_ENTERPRISE_PRO

./: .replit  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  CLEAN_STRUCTURE_REPORT.md  FINAL_CLEAN_REPORT.md  FINAL_PERFECTION_REPORT.md  PLANO_OTIMIZACAO_METRICAS.md  PROJECT_SUMMARY.md  README.md  ROADMAP_DE_SOLUCOES.md  SECURITY_SOLUTIONS.md  app.py  cleanup_duplicates.py  fix_security_vulnerabilities.py  optimized_metrics.json  replit.md  run_quality_checks.py  security_fixes_report.md  start.sh  validate_system.py  validation_report.json
sankofa-enterprise-real/: .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  CHECKSUMS.md5  INSTALLATION_GUIDE.md  QUICK_START.md  README.md  RELATORIO_EXECUTIVO_FINAL.md  RELATORIO_QA_EXECUTIVO.md  SECURITY.md  TRIPLE_CHECK_DEVASTADOR.md  docker-compose.yml  pyproject.toml
sankofa-enterprise-real/backend/: Dockerfile  pytest.ini  requirements-updated.txt  requirements.txt  simple_api.py
sankofa-enterprise-real/config/: configuration_rules.json
sankofa-enterprise-real/docs/: AIFORGE_ANALYSIS_REPORT.md  AIFORGE_DOUBLE_CHECK_CORRECTED.md  AIFORGE_SOLUTION_CONSOLIDADA.md  AIFORGE_TRIPLE_CHECK_FINAL.md  AIFORGE_VERIFICATION_FINAL.md  ANALISE_COMPLIANCE_LGPD.md  ANALISE_FINAL_RIGOROSA_SANKOFA_PRO.md  ANALISE_IMPARCIAL_SANKOFA_PRO.md  ANALISE_RIGOROSA_FINAL_HONESTA.md  CHECKLIST_OURO_AVALIACAO.md  DOCUMENTACAO_TECNICA_COMPLETA.md  DOCUMENTACAO_TECNICA_FINAL_V4.md  ESTRATEGIAS_DEPLOYMENT_VALIDACAO.md  GITHUB_REPO_COMPARISON.md  INDEX_DOCUMENTACAO.md  INTEGRACAO_FEEDBACK_HUMANO.md  MANUAL_USUARIO_FINAL.md  (+12 more)
(+247 files in other folders)
